Changes: 1. Fixed menu header indentation 2. Changed the color of the H1 header 3. Fixed leaving the contact screen in the mobile-menu 4. Removed classes that are not BEM 5. Fixed hiding buttons in the menu 6. Changed hiding Windows from the menu 7. Added alignment for iconsearch in the mobile-menu 8. Changed the margins for swiper pagination 9. Fixed the margins for the footer. Class for the footer 10. Fixed the appearance of slider elements

--- a/src/components/mobile-menu/header/header.scss
+++ b/src/components/mobile-menu/header/header.scss
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     position: relative;
     display: flex;
+    justify-content: space-between;
+}
+
+.header__box {
+    display: flex;
 }
 
 .page__header {
@@ -13,7 +18,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .header {
-        min-width: 288px;
+        width: 100%;
     }
 
     .header__sub-menu {
