--- a/src/scss/utils/vars.scss
+++ b/src/scss/utils/vars.scss
@@ -6,7 +6,7 @@ $mobile-menu-item-color-active: #7E7E82;
 $mobile-menu-vertical-line-color: #41F6D7;
 
 // post
-$title-color: #1B1C21;
+$post-title-color: #1B1C21;
 $text-color: #1B1C21;
 $item-color: #7E7E82;
 $item-color-active: #B8FFEC;
