--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -18,10 +18,11 @@
     margin-right: 33px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
-    footer {
+@media screen and (min-width: 320px) and (max-width: 520px) {
+    .footer {
         flex-direction: column;
         align-items: center;
+        padding-top: 16px;
     }
 
     .copyright,
