--- a/src/components/main/box/title/title.scss
+++ b/src/components/main/box/title/title.scss
@@ -3,7 +3,11 @@
     font-size: 16px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 360px) {
+@media screen and (min-width: 320px) and (max-width: 513px) {
+    .title {
+        padding: 16px;
+    }
+
     .box__title {
         margin-bottom: 16px;
     }
