--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -4,7 +4,7 @@
 @import 'box/box.scss';
 
 .main {
-    margin-bottom: 50px;
+    margin-bottom: 47px;
 }
 
 .title {
@@ -59,8 +59,12 @@
     letter-spacing: -0.2px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 760px) {
+@media screen and (min-width: 320px) and (max-width: 520px) {
     .box__text {
         width: 100%;
+    }
+
+    .main {
+        margin-bottom: 40px;
     }
 }
