--- a/src/components/main/slider/slider.scss
+++ b/src/components/main/slider/slider.scss
@@ -27,19 +27,19 @@
 }
 
 .slider__btn-readmore {
-    margin-top: 8px;
+    margin-top: 24px;
     margin-left: 39px;
 }
 
 .swiper-container {
     position: relative;
-    margin-bottom: 52px;
+    margin-bottom: 32px;
     box-sizing: border-box;
 }
 
 .swiper-pagination {
     position: absolute;
-    z-index: 10;
+    z-index: 1;
     width: 100%;
     height: 12px;
     display: none;
@@ -61,21 +61,46 @@
     background-color: #B5B6BC;
 }
 
-@media screen and (min-width: 320px) and (max-width: 360px) {
+.slider-wrapper {
+    transition: all .3s linear;
+}
+
+.slider-wrapper.is-active {
+    transition: all .3s linear;
+}
+
+.slider__item--hidden {
+    width: 1px;
+    height: 1px;
+    position: absolute;
+    margin: -1px;
+    border: 0;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.slider__item.is-active {
+    width: 100%;
+    height: 72px;
+    position: relative;
+    margin: 0;
+    margin-bottom: 16px;
+}
+
+@media screen and (min-width: 200px) and (max-width: 520px) {
+    .swiper-container {
+        padding: 0;
+    }
+
     .slider-wrapper {
         flex-direction: row;
         flex-wrap: nowrap;
         justify-content: flex-start;
+        padding: 0 16px;
     }
 
     .swiper-pagination {
         display: flex;
-    }
-}
-
-@media screen and (min-width: 361px) and (max-width: 600px) {
-    .slider-wrapper {
-        justify-content: center;
     }
 }
 
