--- a/src/components/message-menu/message-menu.scss
+++ b/src/components/message-menu/message-menu.scss
@@ -1,15 +1,21 @@
 @import 'form/form.scss';
 
 .message-menu {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.message-menu--hidden {
+    border: 0;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
     position: absolute;
-    width: 440px;
-    z-index: 10;
-    background-color: #fff;
-    right: 0;
-    height: 100%;
-    box-shadow: 
-        16px 0px 52px rgba(14, 24, 80, 0.2),
-        -2px 0px 4px rgba(69, 79, 126, 0.02);
+    white-space: nowrap;
+    clip: react(0 0 0 0);
+    clip-path: inset(50%);
 }
 
 .form {
@@ -18,13 +24,35 @@
 }
 
 .message-menu__btn-circle {
-    position: absolute;
     margin-left: -77px;
     margin-top: 32px;
 }
 
-.menu--hidden {
-    display: none;
+.message-menu__content {
+    position: absolute;
+    width: 440px;
+    background-color: #fff;
+    height: 100%;
+    box-shadow: 
+        16px 0px 52px rgba(14, 24, 80, 0.2),
+        -2px 0px 4px rgba(69, 79, 126, 0.02);
+}
+
+.overlay {
+    opacity: .96;
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
+}
+
+@media screen and (min-width: 514px) {
+    .message-menu__btn-circle {
+        position: absolute;
+    }
 }
 
 @media screen and (min-width: 200px) and (max-width: 513px) {
@@ -33,13 +61,7 @@
         margin-left: 16px;
     }
 
-    .message-menu {
+    .message-menu__content {
         width: 100%;
-    }
-}
-
-@media screen and (min-width: 1440px) {
-    .message-menu {
-        width: 440px;
     }
 }
