--- a/src/components/mobile-menu/mobile-menu.scss
+++ b/src/components/mobile-menu/mobile-menu.scss
@@ -1,6 +1,12 @@
 @import 'header/header.scss';
+@import 'content/content.scss';
 
 .mobile-menu {
+    display: flex;
+    z-index: 2;
+}
+
+.mobile-menu__content {
     width: 320px;
     height: 100%;
     background-color: $background-color;
@@ -10,16 +16,19 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+}
+
+.mobile-menu--hidden {
+    display: none;
 }
 
 .mobile-menu__header {
     margin-bottom: 34px;
     background-color: $background-color;
-}
-
-.mobile-menu__logo {
-    margin-right: 78.73px;
 }
 
 .menu {
@@ -58,10 +67,6 @@
     border-top-right-radius: 2px;
     border-bottom-right-radius: 2px;
     transform: translateX(-24px);
-}
-
-.mobile-menu__menu {
-    margin-bottom: calc(19vw - 12px);
 }
 
 .mobile-menu__sub-menu {
@@ -127,8 +132,8 @@
     padding: 0 16px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 360px) {
-    .mobile-menu {
+@media screen and (min-width: 320px) and (max-width: 513px) {
+    .mobile-menu__content {
         width: 100%;
     }
 
@@ -143,7 +148,7 @@
 
 @media screen and (min-width: 1440px) {
     .mobile-menu {
-        display: block;
+        display: flex;
     }
 
     .mobile-menu__btn-circle--icon--close {
